updated at: 2023-04-25 20:52, ホオズキ明かりの杖 - CaTrusty - BOOTH

--- a/VRChat/19/954119.html
+++ b/VRChat/19/954119.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Yzirnbmjlg2R2rj/6WlP+YR26NkyQZaZoCPvYOJz2ls="></script>
+    "4uSu9RPzynEDZV4oU/+svj+WkR4qadAs2prlE6cXCgU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ホオズキ明かりの杖","description":"VRChatなどでお使いいただける3Dモデルです。\nホオズキをモチーフにしたファンタジックな杖で、明かり代わりを想定したものとなっています。\n\n\n\n【内容物】\n・unitypackage\n・FBX\n・テクスチャ\n・各種説明書（画像説明ありのPDF形式）\n　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります）\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing\n\n\n\n【詳細】\n・三角面数：1328\n・ダイナミックボーン対応\n・マテリアル、ライト適用例としてのSceneデータもあります\n","url":"https://booth.pm/ja/items/954119","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/954119/a8fe0779-5c9e-4de5-a63c-28c937aabe70_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Yzirnbmjlg2R2rj/6WlP+YR26NkyQZaZoCPvYOJz2ls="></script>
+    nonce="4uSu9RPzynEDZV4oU/+svj+WkR4qadAs2prlE6cXCgU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/954119/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               98
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/954119/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               98
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
