--- a/VRChat/99/953999.html
+++ b/VRChat/99/953999.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hPEC69GczgGLYK0FepnYrgJHWN3mUDXwVbvbNX6O1e8="></script>
+    "8WUzzIdkXnSxwT6htsJCqaOn/D+u6O6xHnpVPYXftmM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"NEKOMIMIヘッドフォン","description":"猫耳ヘッドホンのモデルのunitypackageとfbxデータです。\n青い部分は別マテリアルなので、簡単に色を変えることができます。\nリップシンク用のモーフが入っています。\nアクセサリーとしてお使い下さい。\n\n100円のはブースト用です。\n無料のものと内容に違いはありません。\n\n改変改造ご自由にどうぞ。\n良識の範囲内でお使い下さい。\n\n■免責事項\n黒井が制作した3Dモデルに、起因または関連する、使用またはその他の扱いによって生じる一切の請求、損害、その他の義務について何らの責任も負いません。","url":"https://booth.pm/ja/items/953999","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/953999/77b81c96-7432-4139-a9e9-9d713b7ed3a9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hPEC69GczgGLYK0FepnYrgJHWN3mUDXwVbvbNX6O1e8="></script>
+    nonce="8WUzzIdkXnSxwT6htsJCqaOn/D+u6O6xHnpVPYXftmM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/953999/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               484
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/953999/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               484
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
