updated at: 2023-04-25 20:53, 【Quest/PC対応3Dモデル】Y’sトースター - Yorinの電気屋 - BOOTH

--- a/VRChat/72/926972.html
+++ b/VRChat/72/926972.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4DG12ifS/7Rgn1/7Lx8TfGx42f5yx4zr7pZLmSav1TY="></script>
+    "Han6BBoPoojzNGmsuenVR01FYj+SMw0qe2cu1oC7dnY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Quest/PC対応3Dモデル】Y’sトースター","description":"〓〓Y'sトースター〓〓\n\nトースターです。\nVRChatでの使用を想定した3Dモデルです。\nVRC_SDK3.0で制作しています。\nぴょこぴょこと動くリップシンクと、愉快な音と共にパンを飛ばすパーティクル付きです。\nPhysBoneを触れる相手からケーブルを引っ張られるかハンドサインでパンを飛ばせます。\n\n―内容物――――――――――――――――――――――――――\n・モデル本体FBX\n・ケーブルFBX\n・VRChat用セッテイング済みPrefab（Quest版/PC版）\n・取扱説明書\n・規約データ\nが入っています。\n――――――――――――――――――――――――――――――　\n\n\n\n\n―セッティング済みデータについて――――――――――――――\nQuest対応版とPC版のセッティング済みのPrefabが２種類入っています。\nQuest版とPC版の共通点\n本体のモデルデータは同じです。308ポリゴンあります。\n\nQuest版とPC版の違い\nPC版　　 パーティクル・本体・ケーブル(490ポリゴン)のフルセッ\n　　　　 トになります。(合計798ポリゴン)\n\nQuest版　パーティクルはありません。リップシンクのみとなります。\n――――――――――――――――――――――――――――――\n\n\n\n―利用規約―――――――――――――――――――――――――\n\n利用規約とガイドラインの両方をご購入前に必ずご確認ください。\n本利用規約はVN3ライセンスを採用させて頂いています。\n規約データは、アバターデータにも同梱されています。\n\nアバター利用規約\nhttps://drive.google.com/file/d/10tfIMYSuNIcevgP5aGiinpa3XIzpulWm/view?usp=sharing\n\nLicense(Eng)\nhttps://drive.google.com/file/d/1h3g83i_EadF0972SkQ0XXzuXUg10uP-n/view?usp=sharing\n\n―――――――――――――――――――――――――――――\n\n\n\n―更新内容―――――――――――――――――――――――――\n\nV2.2---PhysBoneギミック追加/Viewpoint等調整\n\nV2.1---パーティクル不具合修正\n\nV2.0---Avatar3.0対応\n\nV1.1---パーティクルのエラー修正\n\n不具合があれば @Yorin_vrc までお願いします。\n――――――――――――――――――――――――――――――","url":"https://booth.pm/ja/items/926972","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/c6dcf68b-82ac-4294-953d-6f3b88111206/i/926972/400ea5b2-eb3e-424a-9514-838f9050b710_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4DG12ifS/7Rgn1/7Lx8TfGx42f5yx4zr7pZLmSav1TY="></script>
+    nonce="Han6BBoPoojzNGmsuenVR01FYj+SMw0qe2cu1oC7dnY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/926972/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               78
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/926972/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               78
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
