--- a/VRChat/12/953312.html
+++ b/VRChat/12/953312.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "VWjLWlqRmhidr/ORDI/v4dDUSVqdgHEzCd5w9xmPZvk="></script>
+    "iKsbhtGQHqvWeIqPnjlG+/aUCn0e8i+9dlhefJWOSOI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シンプル男性モデル","description":"VRchat向けのオリジナル男性モデルとなっております。\n\n\nこちらは、“有料（投げ銭）版”です。\n無料版のモデルデータと差異はありません。\n\nおまけとして、面倒なところをやっておいた\n『VRChat向けセットアップ』Unity packageが付属しています。\n\n\n無料版【https://kara-no-atelier.booth.pm/items/953338】\n\n【unity2019環境での動作確認済み】\n\n\n不具合などはTwitter【https://twitter.com/Aw_ritsushitA】の方へフィードバックください。","url":"https://booth.pm/ja/items/953312","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/a12bdc4d-2b9f-4309-a04e-8e40fb63d9f6/i/953312/d61889fb-b60d-42ea-9f8f-df4925b49fc0_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VWjLWlqRmhidr/ORDI/v4dDUSVqdgHEzCd5w9xmPZvk="></script>
+    nonce="iKsbhtGQHqvWeIqPnjlG+/aUCn0e8i+9dlhefJWOSOI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/953312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/953312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
