--- a/VRChat/72/953572.html
+++ b/VRChat/72/953572.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "slSEMNKqBbh1yRqTLA5MCmtFga4NZkj1/qubGHWfGQg="></script>
+    "1Xw7JMwMdVW/lv1cr/xCstmnkaR+dSxFmUE/hvvbx+I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"コンポジットランス","description":"槍、銃、剣としての機能を合体させた武器です\nすごく使いにくいと評判です\nギミック等は入っておりません\nご自由にカスタムしてお使いください","url":"https://booth.pm/ja/items/953572","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/ea95dbd8-fd5b-43a0-9a82-ee7157567ac9/i/953572/985b92e6-c27e-4221-8252-02735f9f9e71_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="slSEMNKqBbh1yRqTLA5MCmtFga4NZkj1/qubGHWfGQg="></script>
+    nonce="1Xw7JMwMdVW/lv1cr/xCstmnkaR+dSxFmUE/hvvbx+I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/953572/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/953572/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
