updated at: 2023-04-25 20:53, 【YK&#39;s Atelier】メタルスラッシャー - YK&#39;s Atelier - BOOTH

--- a/VRChat/97/953297.html
+++ b/VRChat/97/953297.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fgHITK/razqCzu2v8fZVCqRleHh8Wau63ugqPso+aUo="></script>
+    "tr4gRUoMgaOPsfFhh8uGufXlsbfEI/FI0rg+3KsdlHM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】メタルスラッシャー","description":"創作武器、短剣となっています。\nスッと出して盗賊だったり、ちょっとしたアバターの装飾として！\nホルダーは太ももにつけることを想定しています。\n\n色の変更は可能です。ご自分のお好きな色にカスタムしてください。\nテクスチャはPSDファイルで保存されております。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n内容物：メタルスラッシャー.fbx\n　　　　メタルスラッシャー.psd\n　　　　メタルスラッシャーホルダー.fbx\n　　　　メタルスラッシャーホルダー.psd\n\nモデルポリゴン数：メタスラ本体　428△\n　　　　　　　　　ホルダー　158△\n\nマテリアル：各1つ\n\n禁止事項：再配布、転売、自作発言","url":"https://booth.pm/ja/items/953297","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/953297/9c6e6cd4-229d-4761-8a55-23478918ffda_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fgHITK/razqCzu2v8fZVCqRleHh8Wau63ugqPso+aUo="></script>
+    nonce="tr4gRUoMgaOPsfFhh8uGufXlsbfEI/FI0rg+3KsdlHM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/953297/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/953297/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
