--- a/VRChat/63/952863.html
+++ b/VRChat/63/952863.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "A0TerrO2FXlbl0hDj4u0CsXYseqQXS7HDIpiNB+A/34="></script>
+    "G3aiGRUM4JX1E01gpNHQo2wEkKeOlqdtoX8kn0qOM2Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"NTG-86 マジックハンマー","description":"魔法陣のテクスチャは二次配布ができないため各自で用意してください。\n\n魔法陣のシェーダーは\nhttp://nn-hokuson.hatenablog.com/entry/2017/03/03/202309\nこちらを参考にしました\n\n●製品内容\nテクスチャファイル(UV図込み)\nunitypackage\nreadme\nfbxファイル\n\n\n●仕様\nこの製品はfbxおよびunitypackage形式の3D武器モデルです。\n主にVRChatを想定して制作しているため、unitypackageは「Unity5.6.3p1」でのみ動作確認をしております。\n\n・unitypackage内の仕様\n配布の都合上マテリアルは全てStandardシェーダーにしております。\n裏面を表示できるシェーダー(特に魔法陣については透過処理も同時に行えるシェーダー)を各自で設定してください。\n\n●商業利用\n本データのR-18への利用や改変については自由です。\nまた、営利目的での利用も可能です。ゲーム等ご自由にお使いください。\nこのモデルを利用した作品を制作した場合は連絡を下されば大変喜びます。\n\n●禁則事項\n本データの改変が可能な状態での販売は禁止します。\n本データを利用したことによる損害に対する責任は負わないものとします。\nまた、特定個人や団体への中傷を目的とした利用を禁止します。\n本データ及びその改変モデルの著作権については大本の製作者である ガロス に帰属します。\n\n製作者　ガロス　@Garoth_suit","url":"https://booth.pm/ja/items/952863","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/3b675027-b6f1-46ed-a792-ba287fa9d0ce/i/952863/aca5bf20-7a20-423f-b1ba-bdfc5f383ebb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="A0TerrO2FXlbl0hDj4u0CsXYseqQXS7HDIpiNB+A/34="></script>
+    nonce="G3aiGRUM4JX1E01gpNHQo2wEkKeOlqdtoX8kn0qOM2Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/952863/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               6
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/952863/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               6
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
