updated at: 2023-04-25 20:54, ランニングシューズ（スニーカー）△580 - 睦月雑貨店 - BOOTH

--- a/VRChat/87/952587.html
+++ b/VRChat/87/952587.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "8RCO5k7N0RWHCWq61X5Xc3+MbvLr0aWpdCy2Ol0i0js="></script>
+    "ZoOrPkNhxJbigg/+vqGfMC8xta/GAWXylgO4mgKqcmo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ランニングシューズ（スニーカー）△580","description":"ありふれたランニングシューズ。\n世間ではスニーカーと呼ばれることも。\n\nVRChatを想定したモデルです。\n\n詳しくはこちら\nhttps://t.co/4noYNVkWkV\n","url":"https://booth.pm/ja/items/952587","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/8f7101e6-808a-4820-be10-4e28daaa14fc/i/952587/94185b13-25d7-408b-8cfd-b7add0070d76_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8RCO5k7N0RWHCWq61X5Xc3+MbvLr0aWpdCy2Ol0i0js="></script>
+    nonce="ZoOrPkNhxJbigg/+vqGfMC8xta/GAWXylgO4mgKqcmo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/952587/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/952587/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
