--- a/VRChat/23/952623.html
+++ b/VRChat/23/952623.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vf4ffPzjvldDIFVjViyTLKtxXbtA2mknxnmNtpOoJcI="></script>
+    "PMvFdfdxT7bR+YWZ3nSE9USnmDHWtXbj4V5KwcCqAMY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat着せ替えおきゅたんパネル \"VRC KisekaeOcutan\"","description":"　VRChat着せ替えおきゅたんパネルは、VRChatのワールドとしてアップロードして使うものです。\n\n　等身大および1/10サイズの2D着せ替えおきゅたんパネル、VRChat用のワールドデータが入っています。\n\n　※なお、商品説明の写真に写っている3Dアバターのおきゅたんは付属しません。こちらで販売しているのは2Dパネルのおきゅたんの方です！！\n\n　KisekaeOcutanフォルダにあるKisekaeOcutan.unityシーンを読み込み、そのままワールドとしてアップロードできます。\n\n　※対応したバージョンのUnityとVRC SDKが必要です。\n\n　単に画像を見たいだけ…という方のために、unitypackage内の着せ替えテクスチャと同じもの（OcutanHight.png）が１枚、zip内に入っています。\n\n\n● 対応バージョン\n\n　Unity 5.6.3p1とVRChat SDK Version Date 2018.06.21.13.02で確認しています。将来のアップデート、他のバージョンでは適時修正が必要になる可能性があります。\n\n　※将来のバージョンでの動作保証はしていません。\n\n\n● ご注意／規約　概要\n\nVRCワールドへのアップロード：可\n\nVRCワールドのPublic申請：商品そのままでなければ可（オリジナルのワールドの一部に置いてあるなど、メインが別にあればそのままでも可）\n\n再配布：商品そのままの再配布は不可。シェーダーなどを他に利用するのは可\n\n改変、追加パーツなど：可。おきゅたんの改変については下記参照\n\n商用利用：動画への映り込みなど可。クレジット表記不要。改変したものの商用利用などは下記条件を守った上で可\n\n\n● ご注意／規約　詳しく\n\n＜改変について＞\n\n　・改変は基本自由です。ただし「おきゅたん」と認識できる形で改変する場合は下記条件を守ってください。\n\n　・おきゅたんのキャラクターを使って、公式作品と誤解するような利用や、キャラクターや関わる人、ファンを貶めたり、反社会的な行為や宗教、政治的な主張を行う目的での利用はしないでください。\n\n　・おきゅたんのキャラクターをもとにした二次創作についてのQ\u0026Aは下記URLをご参照ください。\n\n\thttps://ocutanbot.wixsite.com/ocutan/faq\n\n　・改変したものの再配布は、上記条件を守ったうえで、元のキャラクター絵を簡単に再現できるもの（肌の色変えのみなど）でなければ、問題ありません。\n　たとえば新しい表情や衣装などの追加パーツ、別のキャラクターなど、楽しいですのでぜひ。\n\n\n＜ワールドのアップロードと再配布について＞\n\n　・VRChatのワールドでサンプルシーンそのままのシーンをアップロードし、Public/Privateで複数人で遊んでいただいて問題ありません。\n　ただし、（大きな追加や変更がなく、オリジナル要素が少ないシーンを）「VRChat公式へPublic申請」するのは禁止です。\n\n　・「オリジナルのワールドの一部」に、着せ替えおきゅたんパネルや地面、背景などサンプルシーンを含めてPublic化するのは、基本問題ありません。むしろ喜びます。\n\n　・購入した素材をUnityなどで再利用できる形で再配布する（例：買ったものをそのまま渡す）のは禁止です（VRChatのワールドをアップロードして他のユーザーがそのワールドで遊べるようにするのは問題ありません）。\n\n　・元のおきゅたんの絵を含まない状態、もしくは大幅にアレンジした状態で再配布（例：追加パーツや水着の違う柄、オリジナルの着せ替えパネルを作成など）するのは基本問題ありません。\n　また、背景、地面、シェーダーなどを再配布に含めてかまいません。\n　再配布の際には下記のような表記をしていただけると嬉しいです（必須ではありません）。\n\n　「VRChat着せ替えおきゅたんパネル \"VRC KisekaeOcutan\" を使用」\n\n\n＜VRChatのワールド以外への利用について＞\n\n　他項目の条件を守ったうえで…\n\n　・他のソーシャルVRのワールド、ステージで利用→〇\n　・VRChat含むソーシャルVRでご自身のアバターやアバター演出として利用→〇\n　・テクスチャ画像をグッズにして販売→×\n　・テクスチャ画像をアイコンにして利用→×\n　・テクスチャを自作ゲームに利用→もしあれば、お問い合わせください\n\n\n＜商用利用、著作権表記について＞\n\n　・収益化された動画への出演、映り込みなど問題ありません。その際のクレジット表記も必要ありません。\n\n　・VRChatのワールドに組み込んだ際にはサンプルシーンの看板も一緒に置いていただけたり、看板に書かれているような表記があると嬉しいですが、必須ではありません。\n\n　・（ないと思いますが）ゲームへの組み込みなどをした際には、クレジット表記をお願いする形になると思います。\n\n\n＜その他＞\n\n　・気軽にご相談ください。","url":"https://booth.pm/ja/items/952623","offers":{"priceCurrency":"JPY","@type":"Offer","price":"480"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/952623/4c4cf6b0-e90a-462e-879a-08c9bd64f0c9_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vf4ffPzjvldDIFVjViyTLKtxXbtA2mknxnmNtpOoJcI="></script>
+    nonce="PMvFdfdxT7bR+YWZ3nSE9USnmDHWtXbj4V5KwcCqAMY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -196,7 +196,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/952623/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
@@ -211,14 +211,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/952623/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
