updated at: 2023-04-25 20:54, お守り - ミドリ工房 - BOOTH

--- a/VRChat/99/952599.html
+++ b/VRChat/99/952599.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "N0CZjeDnbF+A83G5f9EWhXMUy8w9NFr2oMjIURfTviE="></script>
+    "rHQNp4az4qovv72EjQl4ytjZ9BfB1TkhFmjzYravouM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"お守り","description":"主にVRchatでの使用を想定したお守りの3Dモデルデータです。\nもちろんVRchat外での使用もご自由にどうぞ。\nおまけとして私がVRchatで着ているメイド服も同梱しました。\n\n内容物\n・3Dモデルの.blendデータ\n・3Dモデルの.fbxデータ\n・3Dモデルの.unitypackageデータ\n・テクスチャの.pngデータ\n・商品画像に使用している.pngデータ\n・私の使用しているメイド服の.blendデータ\n・私の使用しているメイド服の.fbxデータ\n・私の使用しているメイド服のテクスチャデータ\n\n\n利用規約\n・内容物自体の二次配布はご遠慮ください。\n・商用利用や改変等自由にご使用ください。\n・クレジット表記は不要です。\n\n更新履歴\n2018.08.04 モデルの形状の修正","url":"https://booth.pm/ja/items/952599","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/dba35dca-d107-422b-b707-9076e0edd96d/i/952599/73306d76-5737-4dce-a494-40cd92fbb532_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="N0CZjeDnbF+A83G5f9EWhXMUy8w9NFr2oMjIURfTviE="></script>
+    nonce="rHQNp4az4qovv72EjQl4ytjZ9BfB1TkhFmjzYravouM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,7 +153,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/952599/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               110
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/952599/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               110
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
