updated at: 2023-04-25 20:54, わたあめ - 消しゴムの筆箱 - BOOTH

--- a/VRChat/35/952435.html
+++ b/VRChat/35/952435.html
@@ -70,9 +70,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2CTkxU+JMiA0mMpEuqBIJ/0nNfJV3MPpup6x9ejUSLI="></script>
+    "hu6CtqrZzOOmMcvyxNoItyyeykzgR0PQceu9SLzmMcI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"わたあめ","description":"わたあめ","url":"https://booth.pm/ja/items/952435","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3713aef5-42d6-43d4-b456-e2fe144cfcc8/i/952435/b0cdefd6-b73c-4178-9954-4f99327007cc_base_resized.jpg"}
     </script>
@@ -86,7 +86,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2CTkxU+JMiA0mMpEuqBIJ/0nNfJV3MPpup6x9ejUSLI="></script>
+    nonce="hu6CtqrZzOOmMcvyxNoItyyeykzgR0PQceu9SLzmMcI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -110,6 +110,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,10 +155,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/952435/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              167
+                              168
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/952435/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              167
+                              168
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
