updated at: 2023-04-25 20:55, イスラエルらへんのガスマスク - tacoika - BOOTH

--- a/VRChat/17/951317.html
+++ b/VRChat/17/951317.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Kx5PZYKXu8PQrF8oX7dDiTWyKn7zol/7+MNXP+rT1kI="></script>
+    "jlrfvX0b+qL6u98ngQUq/18nLJuBfLu1O7Cl/datA/8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"イスラエルらへんのガスマスク","description":"⊿1015\nなんかイスラエルかそこらへんで使用されてるガスマスクをイメージして作りました。\nなんか臭いなって時とかにどうぞ。\n営利目的での使用含め全般okです。\n改変してくだされば再配布も構いません。","url":"https://booth.pm/ja/items/951317","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/602fbacb-0d72-4af8-a5fd-519a90b362d7/i/951317/e72f04af-3fda-4703-b889-90617d734e3a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Kx5PZYKXu8PQrF8oX7dDiTWyKn7zol/7+MNXP+rT1kI="></script>
+    nonce="jlrfvX0b+qL6u98ngQUq/18nLJuBfLu1O7Cl/datA/8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/951317/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               28
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/951317/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               28
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
