updated at: 2023-04-25 20:55, ホラーな雰囲気のホッケーマスク - tacoika - BOOTH

--- a/VRChat/05/951305.html
+++ b/VRChat/05/951305.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BPei0adh3K5rZ222B5tGRQHk3y/wOze6eDDRbZuB0IM="></script>
+    "s+9ROGWHPwLn8Ah9DeMC5NT1LSlJJ7MRnYoerlx4kEE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ホラーな雰囲気のホッケーマスク","description":"⊿138\nなんとなく怖い雰囲気のホッケーマスクです。\n目の部分は黒色のメッシュでふさがっているので、目を出したい場合はうまく改変してください。\n\n営利目的での使用含め全般okです。\n改変してくだされば、再配布も構いません。","url":"https://booth.pm/ja/items/951305","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/602fbacb-0d72-4af8-a5fd-519a90b362d7/i/951305/ffd56e03-46da-44cc-9df3-ba4af56d8c3d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BPei0adh3K5rZ222B5tGRQHk3y/wOze6eDDRbZuB0IM="></script>
+    nonce="s+9ROGWHPwLn8Ah9DeMC5NT1LSlJJ7MRnYoerlx4kEE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/951305/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               70
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/951305/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               70
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
