updated at: 2023-04-25 20:55, ベネツィアンマスク - tacoika - BOOTH

--- a/VRChat/96/951296.html
+++ b/VRChat/96/951296.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vza+TD++pfiVgIIzEL9znnFAoyFJveVryUCXhln2Tig="></script>
+    "sb5ncLug/TDlngIDn35GMBN8KWoEcJNDYvpD6pELquM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ベネツィアンマスク","description":"⊿74\n仮面舞踏会で用いられているベネツィアンマスクです。\nブーメランにするとよく飛びます。\nテクスチャを同梱していますが、一緒にUV展開図も入れてあるので、お好きにデザインした自分だけのマスクを作ってみてはいかがでしょうか。\n営利目的での使用含め全般okです。\n改変していただければ再配布も構いません。\n\nPS.テクスチャのファイル名についてる「pinpin」はかわいいからつけてるだけですので気にしないでください。","url":"https://booth.pm/ja/items/951296","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/602fbacb-0d72-4af8-a5fd-519a90b362d7/i/951296/e4f35b7f-738f-4c3c-a69a-06845f967e1e_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vza+TD++pfiVgIIzEL9znnFAoyFJveVryUCXhln2Tig="></script>
+    nonce="sb5ncLug/TDlngIDn35GMBN8KWoEcJNDYvpD6pELquM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,10 +182,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/951296/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              63
+                              62
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/951296/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              63
+                              62
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
